# ai_agents_hw5_new

./: .env-example  .gitignore  README.md  prompt_log.md  pyproject.toml
assets/: summary_table.csv
config/: economic_assumptions.json  rate_limits.json  setup.json
docs/: PLAN.md  PRD.md  PRD_airllm_execution.md  PRD_benchmark_reporting.md  PRD_economic_analysis.md  PRD_model_loader.md  PRD_quantization.md  TODO.md
notebooks/: results_analysis.ipynb
results/: airllm_phi3_medium_first_attempt_cuda_error.json  airllm_phi3_medium_success.json  baseline_official_phi3_medium_oom_crash.json  economic_analysis.json  ollama_qwen72b_fail_evidence.json  ollama_smoke_test_phi3_mini.json  quantized_phi3_medium_q2_k.json  quantized_phi3_medium_q4_0.json  quantized_phi3_medium_q4_0_16tok_sensitivity.json
src/local_llm_bench/: __init__.py  constants.py  main.py
src/local_llm_bench/sdk/: __init__.py  sdk.py
src/local_llm_bench/services/: __init__.py  airllm_service.py  benchmark_service.py  cost_analysis_service.py  model_loader_service.py  model_roofline_service.py  quantization_service.py  report_service.py
src/local_llm_bench/shared/: __init__.py  config.py  (+5 more)
tests/: conftest.py
tests/integration/: test_full_suite_mocked.py  test_real_smoke.py
tests/unit/: test_airllm_service.py  test_benchmark_service.py  test_config.py  test_cost_analysis_service.py  test_gatekeeper.py  test_generation_timing.py  test_hardware_probe.py  test_metrics.py  test_model_loader_service.py  test_model_roofline_service.py  test_quantization_service.py  test_report_service.py  test_sdk.py
