[project]
name = "local-llm-bench"
version = "1.00"
description = "Benchmark suite comparing baseline, AirLLM, and quantized local LLM inference (AI Agents course, Assignment 5, group bb-ai-12)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "transformers>=4.40",
    "torch>=2.2",
    "airllm>=2.11",
    "psutil>=5.9",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "jupyter>=1.0",
]

[project.scripts]
local-llm-bench = "local_llm_bench.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/local_llm_bench"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=local_llm_bench --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["src/local_llm_bench/main.py", "*/tests/*"]

[tool.coverage.report]
fail_under = 85
